# agentzero1

./: .env  README.md  pyproject.toml  replace.txt
src/: report.md
src/agentzero1/: crew.py  main.py
src/agentzero1/config/: agents.yaml  tasks.yaml
